src/style/App.css
/* ... */
@media (min-width: 1620px) {
  .left-indent-container,
  .vote-nav .container {
    position: relative;
    left: 160px !important;
  }

  .linked-section {
    position: relative;
    left: -160px !important;
  }

  .vote-nav .remove-vote-nav-indent {
    left: 0 !important;
  }

  .extra-results {
    left: calc(50% - 169px);
    padding-left: calc(50% - 60px);
  }

  .linked-category .extra-results {
    left: 50%;
    padding-left: initial;
  }

  .toc {
    transition: none;
    transform: none;
    width: 20vw;
    max-width: 380px;
    height: calc(100vh - 56px);
    top: 56px;
    z-index: 50;
  }

  #open-toc {
    display: none;
  }

  #controls {
    height: fit-content;
    bottom: 2rem;
    right: 2rem;
    max-width: 200px;
  }

  #controls > .btn {
    padding: 1rem;
    border-radius: 0.5rem;
  }

  #submit-votes {
    font-size: 16pt;
  }

  .lightbox-body {
    max-width: 1200px;
  }
}

/* Typeahead Styling Tests */

.rbt {
  width: 100%;
}

#typeahead-container li .dropdown-item {
  font-weight: bold;
}

.rbt-highlight-text {
  font-weight: normal;
  background: none;
  padding: inherit;
  color: inherit;
}

.rbt-menu-pagination-option a {
  color: #666666;
  font-weight: normal;
}

.bold {
  font-weight: bold;
}

.modal-footer-text {
  margin-right: auto;
}

.criteria-content > * {
  margin-block: 0.5rem;
}

.criteria-content > :first-child {
  margin-top: 0;
}

.criteria-content > :last-child {
  margin-bottom: 0;
}

.criteria-content .nomination-criteria li {
  margin-top: 0.25rem;
}

.portal-modal .modal-content {
  border-radius: 0.75rem;
}

.modal-subtitle {
  order: 1;
  width: 100%;
  margin-top: 0.5rem;
}

.modal-topbar {
  flex-wrap: wrap;
}

.results-category .badges-box {
  margin-top: 1rem;
}

.badges-box p:first-of-type {
  margin-block: 1rem 0.5rem;
}

.badges-box .button-box {
  display: flex;
  gap: 0.5rem;
  justify-content: center;
}

.badges-box img:last-child {
  margin-top: 1.5rem;
}

.badges-box .copied-alert {
  margin-block: 0.5rem 0;
  animation: copied-alert 3s forwards;
}

@keyframes copied-alert {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 1;
  }
  75% {
    opacity: 1;
    margin-bottom: 0;
  }
  95% {
    opacity: 0;
  }
  100% {
    opacity: 0;
    margin-bottom: -2.25rem;
  }
}

.result .related-links {
  padding-left: 0;
  list-style: none;
  background-color: rgb(230, 230, 230);
  border-radius: 1rem;
  border: 1px solid rgb(200, 200, 200);
  width: fit-content;
  padding: 1rem;
  padding-block: 0.75rem;
  margin: 0 auto;
}

.extra-results .result .related-links {
  background-color: rgb(220, 220, 220);
}

.related-links p {
  margin-bottom: 0.25rem;
}

.related-links .fic-links {
  margin-top: 0;
  padding: 0;
  border: none;
}

.related-links .fic-links a {
  margin-right: 6px;
}

.related-links .many-links + :is(.many-links, .one-link) {
  margin-top: 0.75rem;
}

.related-links .fic-links a > * {
  transition: none;
}

.related-links .fic-links a:hover > * {
  width: 24px;
  height: 24px;
  margin: 0;
}

.result .links-text {
  margin-bottom: 0.5rem;
  margin-top: 0.75rem;
}

.result .related-links-container {
  margin-top: 1rem;
}

.result .related-links-container[open] {
  margin-bottom: 1rem;
}

.related-links .many-links:last-child {
  margin-bottom: 0.5rem;
}

.related-links li > :is(a, p) {
  font-weight: 700;
  font-size: 15px;
}

.related-links .image-link > div {
  border-radius: 0.5rem;
  max-width: 100%;
  overflow: hidden;
  display: block;
  margin-bottom: 0.5rem;
  transition: transform 0.2s;
}

.related-links .image-link > div:hover {
  cursor: pointer;
  transform: translateY(-3px);
}

.related-links .image-link:not(:first-child) {
  margin-top: 1rem;
}

.related-links .image-link img {
  max-width: 100%;
}

